Mon Jun  7 12:27:29 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* regexp.c (re_compile_pattern): allow zero times match for
	  non-greedy range repeatation. [ruby-core:30613]

Sat Jun  5 13:31:15 2010  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Matrix library copied from 1.9. It is now identical
	  except for methods dealing with Complex numbers which are absent.
	  [ruby-core:26268]

Thu Jun  3 18:14:15 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in: should replace COMMON_HEADERS if --with-winsock2 is
	  specified.  [ruby-dev:41521]

Thu Jun  3 01:22:45 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fix typo and race condition.

Mon May 31 23:44:22 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: use tclConfig.sh/tkConfig.sh when frameworks
	  are enabled on MacOS X.

	* ext/tk/stubs.c: dirty hack for frameworks and stubs on MacOS X.

	* ext/tk/lib/tk.rb: stop creating a dummy Tcl/Tk interpreter. 
	  And hide a root window before starting eventloop. (for ruby 1.9)

	* ext/tk/tcltklib.c: add codes to support Ruby/Tk-Kit (Rubykit).

Fri May 28 17:34:48 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (rb_ary_product): Ensure arrays to be marked by GC.

Fri May 28 10:40:37 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (checking_for): ignore toplevel.

Wed May 26 19:55:33 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* file.c (file_expand_path): revert a part of r22392. it's commit miss.

Mon May 24 04:58:39 2010  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* io.c, eval.c, process.c: remove all condition of r26371.
	  now, all platform use the same way. [Bug #3278][ruby-core:30167]

Fri May 21 08:33:52 2010  Yutaka Kanemoto  <kanemoto@ruby-lang.org>

	* common.mk (EXPORTOBJS): merged r24482 from trunk. [Bug #3326]

	* common.mk (miniruby$(EXEEXT)): ruby.imp need to be created
	  before creating miniruby. [Bug #3326]
